--- a/SeleniumAutomationDemoWebShop/test-output/old/Suite/classes.html
+++ b/SeleniumAutomationDemoWebShop/test-output/old/Suite/classes.html
@@ -4,14 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.demoWebShop.tests.OpenUrl</td>
+<td>com.demoWebShop.tests.LoginTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>openUrl</td>
+<td>failedLogin</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>successfulLogin</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
