--- a/SeleniumAutomationDemoWebShop/test-output/old/Suite/methods.html
+++ b/SeleniumAutomationDemoWebShop/test-output/old/Suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9570b7">  <td>24/11/04 15:43:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.demoWebShop.tests.LoginTest@659499f1]">&lt;&lt;tearDown</td> 
+<tr bgcolor="9570b7">  <td>24/11/05 09:49:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.demoWebShop.tests.LoginTest@659499f1]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="9570b7">  <td>24/11/04 15:43:30</td>   <td>-27537</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.demoWebShop.tests.LoginTest@659499f1]">&gt;&gt;setup</td> 
+<tr bgcolor="7465a0">  <td>24/11/05 09:48:53</td>   <td>-38960</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.successfulLogin()[pri:1, instance:com.demoWebShop.tests.LoginTest@659499f1]">successfulLogin</td> 
+  <td>main@943010986</td>   <td></td> </tr>
+<tr bgcolor="9570b7">  <td>24/11/05 09:48:51</td>   <td>-41554</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.demoWebShop.tests.LoginTest@659499f1]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@943010986</td>   <td></td> </tr>
-<tr bgcolor="7465a0">  <td>24/11/04 15:43:32</td>   <td>-25877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.failedLogin()[pri:2, instance:com.demoWebShop.tests.LoginTest@659499f1]">failedLogin</td> 
+<tr bgcolor="7465a0">  <td>24/11/05 09:49:12</td>   <td>-19778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.failedLogin()[pri:2, instance:com.demoWebShop.tests.LoginTest@659499f1]">failedLogin</td> 
   <td>main@943010986</td>   <td></td> </tr>
 </table>
