--- a/SeleniumAutomationDemoWebShop/reports/myReport.html
+++ b/SeleniumAutomationDemoWebShop/reports/myReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Tester</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Nov 5, 2024 01:38:53 PM</span></a>
+<a href="#"><span class="badge badge-primary">Jan 13, 2025 09:44:51 AM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">register</p>
             <p class="text-sm">
-              <span>1:39:15 PM</span> / <span>00:00:00:018</span>
+              <span>9:45:21 AM</span> / <span>00:00:00:006</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">register</h5>
-<span class='badge badge-success'>11.05.2024 1:39:15 PM</span>
-<span class='badge badge-danger'>11.05.2024 1:39:15 PM</span>
-<span class='badge badge-default'>00:00:00:018</span>
+<span class='badge badge-success'>01.13.2025 9:45:21 AM</span>
+<span class='badge badge-danger'>01.13.2025 9:45:21 AM</span>
+<span class='badge badge-default'>00:00:00:006</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,7 +104,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:39:15 PM</td>
+        <td>9:45:21 AM</td>
         <td>
           The test case passed is : register
         </td>
@@ -128,13 +128,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Nov 5, 2024 01:38:53 PM</h3>
+<h3>Jan 13, 2025 09:44:51 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Nov 5, 2024 01:39:16 PM</h3>
+<h3>Jan 13, 2025 09:45:22 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -204,7 +204,7 @@
 </div></div>
 <script>
 var timeline = {
-"register":0.018
+"register":0.006
 };
 </script>
 <div class="row">
